--- a/src/styles/_manager.scss
+++ b/src/styles/_manager.scss
@@ -8,6 +8,10 @@
   width: 100%;
   background: white;
   padding: 30px;
+
+  h3 {
+    margin-bottom: 0.8em;
+  }
 }
 
 .manager .inner-wrapper {
@@ -18,10 +22,10 @@
 .manager .inner-wrapper h1 {
   text-align: center;
   color: $black;
-  font-family: $font-family-sans-serif;
+  letter-spacing: 3px;
+  font-family: $font-family-serif;
   text-transform: uppercase;
   margin-top: 10px;
-  letter-spacing: 0.02em;
 }
 
 .manager .inner-wrapper img.center {
@@ -212,7 +216,7 @@ input.rbt-input, .rbt-input-hint, .custom-select, input[name="currentBid"] {
 
 @media screen and (min-width: 768px) {
   .manager .inner-wrapper h1 {
-    font-size: 50px;
+    font-size: 40px;
   }
 }
 
