--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -31244,11 +31244,80 @@ th {
   .intro-content h1 a > span:nth-child(2) {
     font-size: .45em; } }
 
+/* Log In on Main Screen */
+.login {
+  min-height: 100%;
+  width: 100%;
+  background: white;
+  padding: 30px;
+  background-image: url("../assets/welcome-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center center; }
+  .login h3 {
+    margin-bottom: 0.8em; }
+
+.login .inner-wrapper {
+  max-width: 700px;
+  margin: 4% auto;
+  color: #23313a;
+  text-align: center; }
+  .login .inner-wrapper .main-icon {
+    max-width: 410px;
+    margin: 0.5em auto; }
+  .login .inner-wrapper img {
+    max-width: 100%; }
+  .login .inner-wrapper h2 {
+    font-family: "Asap Condensed", sans-serif; }
+  .login .inner-wrapper p {
+    font-family: "Lora", serif;
+    font-size: 18px;
+    line-height: 1.45em; }
+    .login .inner-wrapper p small {
+      font-family: "Asap Condensed", sans-serif;
+      max-width: 560px;
+      line-height: 1.4em;
+      display: block;
+      margin: 0.5em auto; }
+  .login .inner-wrapper form {
+    max-width: 400px;
+    margin: 0.5em auto; }
+  .login .inner-wrapper .field {
+    margin-bottom: 15px;
+    margin-top: 15px; }
+  .login .inner-wrapper .field > input {
+    font-family: "Lora", serif;
+    font-size: 18px !important;
+    height: 55px !important;
+    margin: 0em;
+    outline: none;
+    -webkit-appearance: none;
+    tap-highlight-color: rgba(255, 255, 255, 0);
+    line-height: 1.21428571em;
+    padding: 0.67857143em 1em;
+    font-size: 1em;
+    background: #FFFFFF;
+    border: 1px solid #23313a;
+    color: rgba(0, 0, 0, 0.87);
+    border-radius: 0.28571429rem;
+    box-shadow: 0em 0em 0em 0em transparent inset;
+    -webkit-transition: color 0.1s ease, border-color 0.1s ease;
+    transition: color 0.1s ease, border-color 0.1s ease; }
+  .login .inner-wrapper .field > label {
+    color: #6a7072;
+    text-transform: uppercase;
+    font-size: 13px;
+    letter-spacing: 2px;
+    font-family: "Asap Condensed", sans-serif;
+    font-weight: 300;
+    margin-bottom: 12px; }
+
 @media screen and (min-width: 1400px) {
   .grid-item {
     height: 135px; }
   .grid-item.grid-item-width4 h4 {
-    font-size: 45px; } }
+    font-size: 45px; }
+  .login .inner-wrapper p {
+    font-size: 20px; } }
 
 @media screen and (min-width: 1500px) {
   .grid-item {
