--- a/src/styles/_manager.scss
+++ b/src/styles/_manager.scss
@@ -34,13 +34,13 @@
 }
 
 .manager .inner-wrapper .fields {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .manager .inner-wrapper .field {
-  margin-bottom: 15px;
-  margin-top: 15px;
+  margin-bottom: 10px!important;
+  margin-top: 10px!important;
 }
 
 .manager .inner-wrapper .ui.form .field > label {
