--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -112,9 +112,14 @@ body {
 }
 
 .side {
-  position: fixed;
+
   z-index: 100;
-  width: 50%;
+  width: 100%;
+
+  @media screen and (min-width:1060px) {
+    position: fixed;
+    width: 50%;
+  }
 }
 
 .open-left .side,
@@ -141,7 +146,10 @@ button {
 .overlay,
 .side {
   top: 0;
-  height: 100%;
+  height: 50vh;
+  @media screen and (min-width:1060px) {
+    height: 100%;
+  }
 }
 
 .side-left .overlay,
@@ -182,41 +190,70 @@ button {
 }
 
 .intro-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  padding: 0 1em;
-  width: 70%;
-  -webkit-transform: translateY(-50%) translateX(-50%);
-  transform: translateY(-50%) translateX(-50%);
+  width: 80%;
+  margin: 0 auto;
+  padding: 65px 0 30px;
+
+  @media screen and (min-width:1060px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 0 1em;
+    width: 70%;
+    -webkit-transform: translateY(-50%) translateX(-50%);
+    transform: translateY(-50%) translateX(-50%);
+    img {
+      max-width: 100%;
+    }
+  }
 }
 
 .open-left .intro-content,
 .open-right .intro-content {
   opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 75%;
   padding: 0 1em;
-  width: 30%;
   cursor: pointer;
-  -webkit-transform: translateY(-50%) translateX(-50%);
-  transform: translateY(-50%) translateX(-50%);
+
+  @media screen and (min-width:1060px) {
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    width: 30%;
+    -webkit-transform: translateY(-50%) translateX(-50%);
+   transform: translateY(-50%) translateX(-50%);
+  }
 }
 
 .intro-content {
   text-align: center;
+  h1 {
+    margin-top: 0;
+  }
+
+  @media screen and (min-width:1060px) {
+    h1 {
+      margin-top: 20px;
+    }
+  }
 }
 
 .profile {
   margin: 0 auto;
-  max-width: 70%;
-  max-height: 200px;
-  text-align: center;
-}
 
-.profile img {
-  max-width: 100%;
+  text-align: center;
+  img {
+    max-width: 160px;
+  }
+
+
+  @media screen and (min-width:768px) {
+    max-width: 70%;
+    max-height: 300px;
+
+    img {
+      max-width: 100%;
+    }
+  }
 }
 
 .intro-content h1 a > span {
@@ -225,7 +262,7 @@ button {
 
 .intro-content h1 a > span:first-child {
   font-weight: 700;
-  font-size: 16px;
+  font-size: 24px;
   letter-spacing: 3px;
   font-family: $font-family-serif;
   text-transform: uppercase;
@@ -369,7 +406,7 @@ th {
 
 @media screen and (min-width: 768px) {
   .profile {
-    max-width: 140px;
+    max-width: 200px;
   }
 
   .intro-content h1 a > span {
