--- a/src/styles/_draftboard.scss
+++ b/src/styles/_draftboard.scss
@@ -14,6 +14,12 @@
 
 .grid {}
 
+.board-wrapper {
+  .column {
+    padding: 10px!important;
+  }
+}
+
 .grid-item {
   font-family: $font-family-sans-serif;
 
