--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,9 +1,13 @@
+@import "~@blueprintjs/core/lib/css/blueprint.css";
+@import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
 @import "semantic";
 @import "variables";
 @import "animations";
 @import "base";
 @import "draftboard";
 @import "manager";
+
+
 
 /*
 
