--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -31296,6 +31296,8 @@ th {
   .login .inner-wrapper .main-icon {
     max-width: 410px;
     margin: 0.5em auto; }
+    .login .inner-wrapper .main-icon div[aria-label="animation"] {
+      max-width: 98% !important; }
   .login .inner-wrapper img {
     max-width: 100%; }
   .login .inner-wrapper h2 {
