--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -47,6 +47,11 @@ a:hover {}
 
 /* custom */
 
+.centered {
+  text-align: center;
+  justify-content: center;
+}
+
 .container {
   max-width: 100%;
   margin: 0;
